--- a/dein.toml
+++ b/dein.toml
@@ -32,7 +32,17 @@ repo = 'kana/vim-operator-replace'
 repo = 'rhysd/vim-operator-surround'
 
 [[plugins]]
-repo = 'itchyny/lightline.vim'
+repo = 'vim-airline/vim-airline'
+depends = ['vim-airline-themes', 'promptline.vim']
+
+[[plugins]]
+repo = 'vim-airline/vim-airline-themes'
+
+[[plugins]]
+repo = 'cocopon/iceberg.vim'
+
+[[plugins]]
+repo = 'edkolev/promptline.vim'
 
 [[plugins]]
 repo = 'nathanaelkane/vim-indent-guides'
